--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.27.1",
+    "axios": "^0.22.0",
     "json-server": "^0.16.3",
     "ra-data-simple-rest": "^3.18.3",
     "react": "^17.0.2",
     "react-admin": "^3.18.3",
     "react-apexcharts": "^1.3.9",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-froala-wysiwyg": "^4.0.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
