--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tua-react-admin",
+  "name": "@youna-shop/admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.27.1",
     "axios": "^0.22.0",
+    "formik": "^2.2.9",
     "json-server": "^0.16.3",
     "ra-data-simple-rest": "^3.18.3",
     "react": "^17.0.2",
@@ -22,7 +23,9 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "sweetalert2": "^11.1.7",
-    "web-vitals": "^1.1.2"
+    "universal-cookie": "^4.0.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
