--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.27.1",
     "axios": "^0.22.0",
+    "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "json-server": "^0.16.3",
     "ra-data-simple-rest": "^3.18.3",
