--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^31.0.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.27.1",
     "axios": "^0.22.0",
+    "boxicons": "^2.0.9",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "jodit-react": "^1.1.12",
     "json-server": "^0.16.3",
     "ra-data-simple-rest": "^3.18.3",
     "react": "^17.0.2",
