--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.27.1",
     "axios": "^0.22.0",
     "boxicons": "^2.0.9",
+    "env-cmd": "^10.1.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
     "jodit-react": "^1.1.12",
